added write-through strategy
